@@ -96,6 +96,8 @@ version ? (????-??-??):
   - added link speed for netlinks and nodelinks [chilan]
   - additional tariff types to select (phone, tv) [chilan]
   - uke report support for service types [chilan]
+  - chooselocation: redesigned logic for borough and city lookups (needed to get rid of
+    unavailable boroughs bug) [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
